<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Directory.Modify_Contact">

    <TextView
        android:id="@+id/Modify_contact_identity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@string/identity"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/Modify_contact_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:inputType="text" />

    <EditText
        android:id="@+id/Modify_contact_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/Modify_contact_jo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@string/job"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/Modify_contact_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:inputType="text" />

    <EditText
        android:id="@+id/Modify_contact_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/role"
        android:inputType="text" />

    <TextView
        android:id="@+id/Modify_contact_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_purple"
        android:text="@string/contact"
        android:textAlignment="center"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/Modify_contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="text" />

    <EditText
        android:id="@+id/Modify_contact_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phonenumber"
        android:inputType="text" />

    <EditText
        android:id="@+id/Modify_contact_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/Modify_contact_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_call" />

</LinearLayout>