<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.example.juliefalcou.my_mvvm_app.LoginViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context = ".MainActivity"
        android:background="#bf9ad4">

        <EditText
            android:id="@+id/Connect_email"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="#eeeeee"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/Connect_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Connect_email"
            android:layout_alignStart="@+id/Connect_email"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/Connect_access"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="90dp"
            android:background="@android:color/white"
            android:text="@string/connexion"
            android:textColor="#612780"
            />

        <Button
            android:id="@+id/Connect_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Connect_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:background="@android:color/transparent"
            android:text="@string/account"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>